--- a/BlazorWasmAppAzureAdLogin/wwwroot/index.html
+++ b/BlazorWasmAppAzureAdLogin/wwwroot/index.html
@@ -28,6 +28,7 @@
     </div>
     <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="tokenHelper.js"></script>
 </body>
 
 </html>
